samples/_failures_safe/1761627907_df4aa9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b93aa4a4.c: In function ‘bfs_shortest_path’:
./samples/SAFE/__tmp_b93aa4a4.c:161:29: error: expected ‘;’ at end of input
  161 |                     neighbor
      |                             ^
      |                             ;
./samples/SAFE/__tmp_b93aa4a4.c:161:21: error: expected declaration or statement at end of input
  161 |                     neighbor
      |                     ^~~~~~~~
./samples/SAFE/__tmp_b93aa4a4.c:161:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b93aa4a4.c:161:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b93aa4a4.c:161:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b93aa4a4.c:161:21: error: expected declaration or statement at end of input
